# num_recognize_windows

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat  canvaswidget.cpp  canvaswidget.h  mainwindow.cpp  mainwindow.h  recognizer.cpp  recognizer.h  setup_windows.ps1  train_model.py
